_generated-doc/3.0/config/quarkus-hibernate-validator.adoc

:summaryTableId: quarkus-hibernate-validator
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-validator_configuration]]link:#quarkus-hibernate-validator_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-validator_quarkus.hibernate-validator.fail-fast]]`link:#quarkus-hibernate-validator_quarkus.hibernate-validator.fail-fast[quarkus.hibernate-validator.fail-fast]`

[.description]
--
Enable the fail fast mode. When fail fast is enabled the validation will stop on the first constraint violation detected.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_VALIDATOR_FAIL_FAST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_VALIDATOR_FAIL_FAST+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


h|[[quarkus-hibernate-validator_quarkus.hibernate-validator.method-validation-method-validation]]link:#quarkus-hibernate-validator_quarkus.hibernate-validator.method-validation-method-validation[Method validation]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-validator_quarkus.hibernate-validator.method-validation.allow-overriding-parameter-constraints]]`link:#quarkus-hibernate-validator_quarkus.hibernate-validator.method-validation.allow-overriding-parameter-constraints[quarkus.hibernate-validator.method-validation.allow-overriding-parameter-constraints]`

[.description]
--
Define whether overriding methods that override constraints should throw a `ConstraintDefinitionException`. The default value is `false`, i.e. do not allow. 
See Section 4.5.5 of the JSR 380 specification, specifically "In sub types (be it sub classes/interfaces or interface implementations), no parameter constraints may be declared on overridden or implemented methods, nor may parameters be marked for cascaded validation. This would pose a strengthening of preconditions to be fulfilled by the caller."

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_VALIDATOR_METHOD_VALIDATION_ALLOW_OVERRIDING_PARAMETER_CONSTRAINTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_VALIDATOR_METHOD_VALIDATION_ALLOW_OVERRIDING_PARAMETER_CONSTRAINTS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-validator_quarkus.hibernate-validator.method-validation.allow-parameter-constraints-on-parallel-methods]]`link:#quarkus-hibernate-validator_quarkus.hibernate-validator.method-validation.allow-parameter-constraints-on-parallel-methods[quarkus.hibernate-validator.method-validation.allow-parameter-constraints-on-parallel-methods]`

[.description]
--
Define whether parallel methods that define constraints should throw a `ConstraintDefinitionException`. The default value is `false`, i.e. do not allow. 
See Section 4.5.5 of the JSR 380 specification, specifically "If a sub type overrides/implements a method originally defined in several parallel types of the hierarchy (e.g. two interfaces not extending each other, or a class and an interface not implemented by said class), no parameter constraints may be declared for that method at all nor parameters be marked for cascaded validation. This again is to avoid an unexpected strengthening of preconditions to be fulfilled by the caller."

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_VALIDATOR_METHOD_VALIDATION_ALLOW_PARAMETER_CONSTRAINTS_ON_PARALLEL_METHODS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_VALIDATOR_METHOD_VALIDATION_ALLOW_PARAMETER_CONSTRAINTS_ON_PARALLEL_METHODS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-validator_quarkus.hibernate-validator.method-validation.allow-multiple-cascaded-validation-on-return-values]]`link:#quarkus-hibernate-validator_quarkus.hibernate-validator.method-validation.allow-multiple-cascaded-validation-on-return-values[quarkus.hibernate-validator.method-validation.allow-multiple-cascaded-validation-on-return-values]`

[.description]
--
Define whether more than one constraint on a return value may be marked for cascading validation are allowed. The default value is `false`, i.e. do not allow. 
See Section 4.5.5 of the JSR 380 specification, specifically "One must not mark a method return value for cascaded validation more than once in a line of a class hierarchy. In other words, overriding methods on sub types (be it sub classes/interfaces or interface implementations) cannot mark the return value for cascaded validation if the return value has already been marked on the overridden method of the super type or interface."

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_VALIDATOR_METHOD_VALIDATION_ALLOW_MULTIPLE_CASCADED_VALIDATION_ON_RETURN_VALUES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_VALIDATOR_METHOD_VALIDATION_ALLOW_MULTIPLE_CASCADED_VALIDATION_ON_RETURN_VALUES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


h|[[quarkus-hibernate-validator_quarkus.hibernate-validator.expression-language-expression-language]]link:#quarkus-hibernate-validator_quarkus.hibernate-validator.expression-language-expression-language[Expression Language]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-validator_quarkus.hibernate-validator.expression-language.constraint-expression-feature-level]]`link:#quarkus-hibernate-validator_quarkus.hibernate-validator.expression-language.constraint-expression-feature-level[quarkus.hibernate-validator.expression-language.constraint-expression-feature-level]`

[.description]
--
Configure the Expression Language feature level for constraints, allowing the selection of Expression Language features available for message interpolation. 
This property only affects the EL feature level of "static" constraint violation messages set through the `message` attribute of constraint annotations. 
In particular, it doesn't affect the default EL feature level for custom violations created programmatically in validator implementations. The feature level for those can only be configured directly in the validator implementation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_VALIDATOR_EXPRESSION_LANGUAGE_CONSTRAINT_EXPRESSION_FEATURE_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_VALIDATOR_EXPRESSION_LANGUAGE_CONSTRAINT_EXPRESSION_FEATURE_LEVEL+++`
endif::add-copy-button-to-env-var[]
-- a|
`default`, `none`, `variables`, `bean-properties`, `bean-methods` 
|`bean-properties`

|===